# yuleOSH

./: .coveragerc  .dockerignore  .gitignore  .task-prompt.sh  .task-to-claude.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cross  LICENSE  Makefile  README.md  SECURITY.md  dashboard.html  docker-compose.yml  docker-compose.yml.legacy  index.html  install.sh  pipeline.html  pricing.html  pyproject.toml  pytest.ini  setup.py  sprint-v0.3.0-plan.md  tech-debt.md  yuleosh_cli.py
.github/: dependabot.yml
deploy/: .env.production.example  Dockerfile.backend  PRODUCTION_DEPLOY.md  cloud-deploy.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
docs/: 404.html  FAQ.md  QUICKSTART.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._tree.txt  _not-found.html  _not-found.txt  acceptance-matrix-v0.4.0.md  api-reference.md  architecture.md  aspice-readiness-assessment.md  ci-coverage-gateway.md  ci-rtm-check.sh  commercial-roadmap.md  contributor-testing-guide.md  dashboard.html  db-migration.md  dogfooding-report.md  dogfooding-v2.md  edition-matrix.md  faq.md  final-report-v0.2.0.md  gaps-fixed.md  hil-testing.md  hn-post-v2.md  impact-analysis-v0.4.0.md  index.html  index.txt  launch-checklist.md  login.html  notifications.md  perf-baseline.md  pipeline-viz.html  pipeline.html  plugin-spec.md  pricing.html  pricing.md  pricing.txt  (+18 more)
frontend/: README.md  next.config.ts  package-lock.json  package.json
project-docs/: acceptance-matrix-rtm.md  aspice-readiness-assessment.md  spec.md  user-guide.md
reports/: 2026-06-17-phase-zero-synthesis.md  compliance-report.md  expert-action-items-strategy.md  expert-assessment-lao-chen.md  expert-brief-2026-06-17.md  final-productization-report.md  loop1-docs-report.md  loop1-fix-report.md  loop2-complete-report.md  loop2-engineering-report.md  loop2-plan.md  loop2-strategy-report.md  loop3-engineering-report.md  loop3-final-recheck.md  loop3-plan.md  loop3-release-report.md  next-direction-analysis-claude.md  perf-baseline-report.md  productization-alpha-report.md  productization-beta-report.md  productization-final-review.md  productization-sprint-plan.md  self-check-plan.md  self-check-track-a.md  self-check-track-b.md  self-check-track-c.md  three-loop-final-report.md  v0.4.1-completion-report.md  v1.0.0-coverage-baseline.md  v1.0.0-fix-plan.md  v1.0.0-quality-assessment.md  v1.0.1-fix-recheck.md  v1.0.1-release-notes.md  v1.0.1-track-a-report.md
scripts/: check-mangled-env.py
specs/: acceptance-matrix-sprint2.md  spec-delta-sprint2.md  spec-delta-sprint4.md  spec-delta-sprint5.md  spec-product-v1.md
src/: __init__.py  notify.py  requirements.txt  store.py  store_pg.py
templates/: README.md  template-spec.md
tests/: test_alpha01_full_flow.py  test_alpha02_onboarding.py  test_api.py  test_api_auth_deep.py  test_auth_extended.py  test_c_review.py  (+72 more)
(+406 files in other folders)
