[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yuleosh"
version = "0.8.0"
description = "嵌入式AI开发全流程平台 — OpenSpec+Superpowers+Harness Engineering 三位一体"
authors = [{name = "frisky1985"}]
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://github.com/frisky1985/yuleOSH"
Repository = "https://github.com/frisky1985/yuleOSH"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pytest-mock"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.paths]
source = ["src", "src/ui", "src/ci", "src/pipeline", "src/cross", "src/spec", "src/evidence", "src/cli", "src/api", "src/llm"]

[project.scripts]
yuleosh = "yuleosh_cli:main"
